objects/X7S_Event_Reg_Field_Set_Assignment__mdt/X7S_Event_Reg_Field_Set_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>7S Event Registration Field Set Assignment</description>
    <label>7S Event Reg Field Set Assignment</label>
    <pluralLabel>7S Event Reg Field Set Assignments</pluralLabel>
</CustomObject>