objects/X7S_Event_Reg_Field_Set_Assignment__mdt/fields/Field_Label_Override__c.field-meta.xml
<CustomField>
    <fullName>Field_Label_Override__c</fullName>
    <description>Override existing field name</description>
    <label>Field Label Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>