objects/X7S_Event_Reg_Field_Set_Assignment__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Mark a field as required.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>