objects/X7S_Event_Reg_Field_Set_Assignment__mdt/fields/X7S_Event_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>X7S_Event_Field_Name__c</fullName>
    <label>7S Event Field Name</label>
    <referenceTo>X7S_Event_Reg_Field__mdt</referenceTo>
    <relationshipLabel>7S Event Reg Field Set Assignments</relationshipLabel>
    <relationshipName>X7S_Event_Reg_Field_Set_Assignments</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>